--- a/style1.css
+++ b/style1.css
@@ -4,56 +4,10 @@
     padding: 0;
     font-family: sans-serif;
 }
-
-#menuContainar{
-    margin: 0;
-    background-color: black;
-    padding: 0 0px;
-    height: 60px;
-    line-height: 60px;
-	font-size: 2em;
-    text-align: center;
-}
-
-#menuContainar.fixed {
-    position: fixed;
-    background-color: #1e202b;
-    z-index: 10000;
-    top: 0;
-    left:0;
-    right: 0;;
-
-}
-
-#menuContainar > li{
-    display: inline-block;
-    padding: 0px;
-}
-
-.button {
-    color: black;
-    border: 2px solid red;
-	padding: 5px 40px;
-    margin: 5px 20px;
-    font-family: cursive;
-    text-transform: uppercase; 
-	font-size: 15px;
-    letter-spacing: 1px;
-    box-shadow: 0 0 10px beige;
-        background-color: white;
-  }  
-
-/*creating animation effect*/
-button:hover {
-    color: yellow;
-    background: black;
-    box-shadow: 0 0 50px rgb(88, 193, 246);
-    border: 2px solid gray;
-} 
 .Content{
     height: 100%;
     width: 100%;
-    background-image: url(photos/background1.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4),url(photos/resize.jpg));
     /* background-image: url(photos/resize.jpg); */
     background-position: center;
     background-size: cover;
@@ -64,17 +18,17 @@ button:hover {
     height: 480px;
     position: relative;
     margin: 6% auto;
-    background: rgb(20, 20, 20);
+    background: rgb(225, 225, 241);
     padding: 5px;
     overflow: hidden;
-    opacity: 0.8;
 }
 
 .Home_button{
     width: 220px;
-    margin:1px 20%; /* 3px auto; */
+    margin: 35px auto;
     position: relative;
-    border-radius: 10px;
+    box-shadow: 0 0 20px 9px #ff61241f;
+    border-radius: 30px;
 }
 
 .button-lr{
@@ -84,10 +38,6 @@ button:hover {
     border: 0;
     outline: none;
     position: relative;
-    box-shadow: 0 0 20px 9px #f147041f;
-    color: rgb(253, 253, 223);
-    border-radius: 20px;
-
 }
 
 #btn{
@@ -96,7 +46,7 @@ button:hover {
     position: absolute;
     width: 110px;
     height: 100%;
-    background: linear-gradient(to right, #ff2410, #ffad06);
+    background: linear-gradient(to right, #4010ff, #ffad06);
     border-radius: 30px;
     transition: .5s;
 }
@@ -108,16 +58,15 @@ button:hover {
     transition:.5s;
 }
 
-.input_field{
+.input-field{
     width: 100%;
     padding: 10px 0;
     margin: 5px 0;
     border-left: 0;
     border-right: 0;
-    border-bottom: 1px solid rgb(248, 246, 246);
+    border-bottom: 1px solid #999;
     outline: none;
     background: transparent;
-    color: white;
 }
 
 .submit-btn{
@@ -126,13 +75,10 @@ button:hover {
     cursor: pointer;
     display: block;
     margin: auto;
-    background: linear-gradient(to right,#ff2410, #ffad06);
+    background: linear-gradient(to right, #ff105f, #ffad06);
     border: 0;
     outline: none;
     border-radius: 30px;
-    color: rgb(253, 253, 223);
-
-    box-shadow: 0 0 20px 22px #f147041f;
 } 
 
 .class-box{
@@ -140,9 +86,9 @@ button:hover {
 
 }
 span{
-    color: rgb(119, 119, 119);
+    color: #777;
     font-size: 12px;
-    bottom: 55px;
+    bottom: 65px;
     position: absolute;
 
 }
@@ -162,7 +108,7 @@ span{
 }
 
 #pacman_title{
-    width: 70px;
+    width: 50px;
     /* width: 200px;
     height: 200px; */
 }
@@ -174,18 +120,3 @@ span{
 #register{
     left: 450px;
 }
-#welcomePage center{
-    margin: 10px;
-    padding: 10px;}
-
-#login_btn{
-    margin-left: 5px;
-}    
-
-
-/* nav{
-	background-color:red;
-	float: left;
-	width:150px;
-	height:500px;
-} */
