--- a/footerStyle.css
+++ b/footerStyle.css
@@ -109,6 +109,8 @@ ul.social-icons {
     align-items: center;
     height: 200px;
     border: 3px solid black;
+    background-color: white;
+    /* z-index: 9999; */
 }
 
 .footer-container-child {
@@ -119,3 +121,8 @@ ul.social-icons {
 .footer-container-child:first-child {
     margin-right: 20px;
 } 
+
+._14 {
+    text-align: center;
+
+}
