--- a/style.css
+++ b/style.css
@@ -57,18 +57,20 @@ button:hover {
     /* background-image: url(photos/resize.jpg); */
     background-position: center;
     background-size: cover;
-    position: absolute;
+    display: flex;
+    justify-content: center;
 }   
-.form-box{
+ #home-screen{ 
     width: 380px;
-    height: 480px;
     position: relative;
     margin: 6% auto;
     background: rgb(20, 20, 20);
     padding: 5px;
     overflow: hidden;
     opacity: 0.8;
-}
+} 
+
+
 
 .Home_button{
     width: 220px;
@@ -139,13 +141,13 @@ button:hover {
     margin: 30px 10px 30px 0;
 
 }
-span{
+/* span{
     color: rgb(119, 119, 119);
     font-size: 12px;
     bottom: 55px;
     position: absolute;
 
-}
+} */
 
 .social-icons{
     margin: 30px auto;
@@ -174,7 +176,7 @@ span{
 #register{
     left: 450px;
 }
-#welcomePage center{
+#home-screen center{
     margin: 10px;
     padding: 10px;}
 
