--- a/footerStyle.css
+++ b/footerStyle.css
@@ -14,6 +14,7 @@ ul {
     width: 350px;
     display:block;
     margin: 0 auto;
+    
 }
 .social-icon {
     color: #fff;
@@ -107,10 +108,15 @@ ul.social-icons {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: 150px;
     border: 3px solid black;
     background-color: white;
-    /* z-index: 9999; */
+    padding: 80px ;
+    font-size: 15px;
+    color: #f6d267;
+    /* background-color: rgb(1, 1, 10); */
+    background-color: black;
+
 }
 
 .footer-container-child {
@@ -124,5 +130,7 @@ ul.social-icons {
 
 ._14 {
     text-align: center;
-
 }
+
+
+
