--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: cursive; 
+    /*sans-serif*/
 }
 
 #menuContainar{
@@ -28,6 +28,12 @@
 #menuContainar > li{
     display: inline-block;
     padding: 0px;
+
+}
+
+#header{
+    background-color :black;
+    padding-top: 10px;
 }
 
 .button {
@@ -40,7 +46,7 @@
 	font-size: 15px;
     letter-spacing: 1px;
     box-shadow: 0 0 10px beige;
-        background-color: white;
+    background-color: white;
   }  
 
 /*creating animation effect*/
@@ -50,57 +56,76 @@ button:hover {
     box-shadow: 0 0 50px rgb(88, 193, 246);
     border: 2px solid gray;
 } 
+
+#ourNames{
+    color: white;
+    text-align: center; 
+    font-size: 18px; 
+    padding-top: 60px;
+    margin-block-start: 15px;
+
+}
+#names{
+    white-space: pre;
+    letter-spacing: 5px;
+    font-weight:bold; 
+    font-size :21px;
+}
 .Content{
     height: 100%;
     width: 100%;
     background-image: url(photos/background1.jpg);
-    /* background-image: url(photos/resize.jpg); */
     background-position: center;
     background-size: cover;
     display: flex;
     justify-content: center;
-}   
+    padding-bottom: 40px;
+
+}  
  #home-screen{ 
     width: 380px;
+    height: 480px;
     position: relative;
-    margin: 6% auto;
-    background: rgb(20, 20, 20);
+    margin: 10px 35%;
+    /* background: rgb(20, 20, 20); */
     padding: 5px;
-    overflow: hidden;
-    opacity: 0.8;
+    
 } 
-
 
 
 .Home_button{
     width: 220px;
     margin:1px 20%; /* 3px auto; */
     position: relative;
-    border-radius: 10px;
+    padding-top: 30px;
+    
+    
+
 }
 
 .button-lr{
+    font-family: cursive;
     padding: 10px 30px;
     cursor: pointer;
     background: transparent;
     border: 0;
-    outline: none;
     position: relative;
     box-shadow: 0 0 20px 9px #f147041f;
     color: rgb(253, 253, 223);
     border-radius: 20px;
-
-}
-
-#btn{
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 110px;
-    height: 100%;
     background: linear-gradient(to right, #ff2410, #ffad06);
-    border-radius: 30px;
     transition: .5s;
+    margin-top: 40px;
+    text-align: center;
+    font-size: 18px;
+    justify-content: center;
+	padding: 9px 30px;
+    width: 250px;
+    position:relative;
+
+    
+
+
 }
 
 .input-group{
@@ -133,23 +158,11 @@ button:hover {
     outline: none;
     border-radius: 30px;
     color: rgb(253, 253, 223);
-
     box-shadow: 0 0 20px 22px #f147041f;
 } 
 
-.class-box{
-    margin: 30px 10px 30px 0;
 
-}
-/* span{
-    color: rgb(119, 119, 119);
-    font-size: 12px;
-    bottom: 55px;
-    position: absolute;
-
-} */
-
-.social-icons{
+/* .social-icons{
     margin: 30px auto;
     text-align: center;
 
@@ -161,12 +174,15 @@ button:hover {
     box-shadow: 0 0 20px 0 #7f7f7f3d;
     cursor: pointer;
     border-radius: 50%;
-}
+} */
 
 #pacman_title{
-    width: 70px;
-    /* width: 200px;
-    height: 200px; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    width: 150px;
+    height: 150px;
 }
 
 #login{
@@ -174,14 +190,12 @@ button:hover {
 }
 
 #register{
-    left: 450px;
+    left: 50px;
 }
-#home-screen center{
-    margin: 10px;
-    padding: 10px;}
 
 #login_btn{
     margin-left: 5px;
+
 }    
 
 
@@ -191,3 +205,25 @@ button:hover {
 	width:150px;
 	height:500px;
 } */
+
+
+#registration-screen{ 
+        width: 380px;
+        height: 480px;
+        position: relative;
+        margin: 6% auto;
+        background: rgb(20, 20, 20);
+        padding: 5px;
+        opacity: 0.8;
+
+}  
+
+ #login-screen{
+    width: 380px;
+    height: 480px;
+    position: relative;
+    margin: 6% auto;
+    background: rgb(20, 20, 20);
+    padding: 5px;
+    opacity: 0.8;
+} 
